Added routing and user manager pages
Added routing and login/registration/conversation list/conversation viewer pages

--- a/humm-frontend/src/navbar.css
+++ b/humm-frontend/src/navbar.css
@@ -1,7 +1,10 @@
-.bg-humm-orange {
-    background-color: #f8941c
-}
-
 .vw-95 {
     width: 95vw;
+}
+
+.btn {
+    min-height: 50px;
+    font-size: 17px;
+    color: white;
+    font-weight: bold;
 }
